# xterm-colors

./: .travis.yml  xterm-colors.cabal
benchmarks/: Benchmark.hs
src/System/Console/Xterm/: Colors.hs  NearestColor.hs  Types.hs
src/System/Console/Xterm/Colors/: TH.hs
tests/System/Console/Xterm/: ColorsSpec.hs  NearestColorSpec.hs
