name:                xterm-colors
version:             0.1.0
license:             MIT
license-file:        LICENSE
author:              Slava Bacherikov
maintainer:          slava@bacher09.org
copyright:           (c) Slava Bacherikov 2015
category:            User Interfaces
build-type:          Simple
cabal-version:       >=1.10
stability:           alpha
synopsis:            Xterm 256 colors info
-- description: 
-- extra-source-files: 

library
  exposed-modules:     System.Console.Xterm.Colors,
                       System.Console.Xterm.NearestColor

  other-modules:       System.Console.Xterm.Types,
                       System.Console.Xterm.Colors.TH

  build-depends:       base >=4.5 && <5,
                       template-haskell >= 2.5,
                       vector >=0.10,
                       vector-th-unbox
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-extensions:    TemplateHaskell, MultiParamTypeClasses, TypeFamilies
  ghc-options:         -O2 -funbox-strict-fields -Wall -fno-warn-name-shadowing

test-suite tests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs
  other-modules:       System.Console.Xterm.ColorsSpec,
                       System.Console.Xterm.NearestColorSpec

  build-depends:       base >=4.5 && <5,
                       hspec,
                       QuickCheck >= 2.5,
                       xterm-colors

benchmark bench-nearest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmarks
  main-is:             Benchmark.hs
  ghc-options:         -O2 -Wall -fno-warn-name-shadowing
  default-language:    Haskell2010
  build-depends:       base >=4.5 && <5,
                       xterm-colors,
                       criterion

source-repository head
  type:                git
  location:            https://github.com/bacher09/xterm-colors.git
